# BookingInquiryDashboard

./: .env.performance  .gitignore  .replit  CLIENT_READY_IMPROVEMENTS.md  DEPLOYMENT_README.md  PROJECT_STATUS.md  Project_status.md  app.py  celery_utils.py  config.py  data_extraction_service.py  env.example  forms.py  greenapi_project_status.md  implementation.md  implementation_plan_update.md  issue_resolution_plan.md  main.py  models.py  ms_graph_service.py  performance_dashboard.html  postgres_worker.py  project_status.md  public_repo_checklist.md  pyproject.toml  readme.md  replit.md  replit.nix  requirements.txt  run_production.py  run_production_simple.py  scheduler.py  taskbreakv2.md  tasks.py  web_app.py  worker.py
app/: __init__.py  auth.py  background_tasks.py  extensions.py  models.py  routes.py  whatsapp_routes.py
app/templates/: 500.html  business_summary_report.html  dashboard.html  dashboard_customer_view.html  edit_extracted_data.html  email_detail.html  inquiry_detail.html  layout.html  macros.html
attached_assets/: Pasted--Booking-Inquiry-Dashboard-Technical-Specification-Overview-A-Flask-based-dashboard-to-man-1742457925979.txt
docs/: greenapi-implementation-plan.md
migrations/versions/: 4e599d1d708d_add_intent_column_to_email.py  5f7a8b9c4d2e_add_body_field_to_email.py  a0538771fe88_add_inquiry_model_and_relationships.py  b27d9abcf23_add_whatsapp_message_model.py
templates/: 404.html  500.html  dashboard.html  inquiry_detail.html  layout.html  login.html
tests/: test_config.py  test_ms_graph.py  test_tasks.py  test_whatsapp_processing.py
(+2 files in other folders)
